# Groebner-Basis-Cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Gtest/: CMakeLists.txt  TestGroebnerAlgorithm.cpp  TestGroebnerBuild.cpp  TestModulo.cpp  TestMonomial.cpp  TestMonomialCompare.cpp  TestMonomialDegree.cpp  TestPolySystem.cpp  TestPolynomial.cpp  TestRational.cpp  TestVariableOrder.cpp
src/: CMakeLists.txt  ComparatorFwd.h  FieldFwd.h  GroebnerAlgorithm.h  GroebnerBuilder.cpp  GroebnerBuilder.h  IteratorFwd.h  ListFwd.h  Modulo.cpp  Modulo.h  Monomial.cpp  Monomial.h  MonomialCompare.cpp  MonomialCompare.h  MonomialDegree.cpp  MonomialDegree.h  PolySystem.cpp  PolySystem.h  Polynomial.cpp  Polynomial.h  Printer.cpp  Printer.h  Rational.cpp  Rational.h  VariableOrder.cpp  VariableOrder.h
